--- a/fuentes.html
+++ b/fuentes.html
@@ -13,6 +13,6 @@
     <h2>este texto es un titulo secundario</h2>
     <h3>este texto es un titulo terciario</h3>
     <p class="font-5em">este es un parrafo con tamaño de 5em</p>
-    <p class="font-8em">gooool de 8em</p>
+    <p class="font-8em">goool de 8em</p>
 </body>
 </html>
