--- a/fuentes3.html
+++ b/fuentes3.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/fuente3.css">
 </head>
 <body>
-    <h1>Fuente 3</h1>
-    <h2>Esta es la fuente N. 3</h2>
+    <div>
+        <label>Disney</label>
+    </div>
 </body>
 </html>
