--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li><a href ="index.html">Inicio</a></li>
         <li><a href ="listas.html">Listas</a></li>
         <li><a href ="fuentes.html">Fuentes</a>
+        <li><a href ="colores.html">colores</li>    
             <ul>
                 <li><a href="fuentes1.html">Fuentes1</a></li>
                 <li><a href="fuentes2.html">Fuentes2</a></li>
