cambio de margenes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <li><a href ="index.html">Inicio</a></li>
         <li><a href ="listas.html">Listas</a></li>
         <li><a href ="fuentes.html">Fuentes</a>
-        <li><a href ="colores.html">colores</li>    
+        <li><a href ="colores.html">colores</li>
+        <li><a href ="margenes.html">margenes</li>
+        <li><a href ="catalogo.html">catalogo</li>
             <ul>
                 <li><a href="fuentes1.html">Fuentes1</a></li>
                 <li><a href="fuentes2.html">Fuentes2</a></li>
