--- a/catalogo.html
+++ b/catalogo.html
@@ -4,26 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>margins</title>
+    <title>margenes</title>
     <link rel="stylesheet" href="css/catalogo.css">
 </head>
 <body>
     <div class="main-box">
-        <div class="box-style box-1">
-            <div class="add-cart-1">
-                <span class="add-cart-1-span">ADD CART</span>
-            </div>
+<!--caja del producto -->
+    <div class="box-style box-1">
+        <div class="product-box">
+           <img src="img/reloj250-250.jpg" alt="reloj">
         </div>
-        <div class="box-style box-2">
-            <div class="add-cart-2">
-                <span class="add-cart-2-span">ADD CART</span>
-            </div>
+        <div class="product-text">
+            <span class="product-text-span">RELOJ</span><br>
+            <span class="text-description">Producto con los mas altos<br>estandares a nivel mundial</span>
+            <span class="price-tex1">$600</span>
         </div>
-        <div class="box-style box-3">
-            <div class="add-cart-3">
-                <span class="add-cart-3-span">ADD CART</span>
-            </div> 
+        <div class="add-cart-1">
+            <span class="add-cart-1-span">ADD TO CART</span>
         </div>
-    </div> 
+    </div>
+    <div class="box-style box-2">
+        <div class="product-box">
+            <img src="img/saco250-250.jpg" alt="saco">
+        </div>
+        <div class="product-text">
+            <span class="product-text-span">SACO</span><br>
+            <span class="text-description">Producto con los mas altos<br>estandares a nivel mundial</span>
+            <span class="price-tex2">$600</span>
+        </div>
+    <div class="add-cart-2">
+        <span class="add-cart-2-span">ADD TO CART</span>
+     </div>
+    </div>
+    <div class="box-style box-3">
+        <div class="product-box">
+            <img src="img/zapatilla250-250.png" alt="zapatillas">
+        </div>
+        <div class="product-text">
+            <span class="product-text-span">ZAPATILLLAS</span><br>
+            <span class="text-description">Producto con los mas altos<br>estandares a nivel mundial</span>
+            <span class="price-tex3">$600</span>
+        </div>
+        <div class="add-cart-3">
+            <span class="add-cart-3-span">ADD TO CART</span>
+         </div>
+    </div>
 </body>
 </html>
