--- a/catalogo.html
+++ b/catalogo.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="main-box">
+        <i class="fa-solid fa-house"></i>
 <!--caja del producto -->
     <div class="box-style box-1">
         <div class="product-box">
