--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <li><a href ="fuentes.html">Fuentes</a>
         <li><a href ="colores.html">colores</li>
         <li><a href ="margenes.html">margenes</li>
+        <li><a href ="tablas.html">tabla</li>
         <li><a href ="catalogo.html">catalogo</li>
             <ul>
                 <li><a href="fuentes1.html">Fuentes1</a></li>
