modified the table

--- a/tablas.html
+++ b/tablas.html
@@ -22,12 +22,12 @@
             <tr>
                 <th class="th-2" rowspan="3">Discovery</th>
                 <td class="th-2">Discovery Channel</td>
-                <td class="th-5" colspan="4"><img src="img/check31x31.jpg" alt="check"></td>
+                <td class="th-5" colspan="4"><i class="fa-solid fa-check fa-bounce"></i></td>
             </tr>
             <tr>
                 <td class="th-2">Discovery H&H</td>
                 <td class="th-3"><i class="x-style fa-solid fa-xmark"></i></td>
-                <td class="th-5"colspan="3"><img src="img/check31x31.jpg" alt="check"></td>
+                <td class="th-5"colspan="3"><i class="fa-solid fa-check fa-bounce"></i></td>
             </tr>
             <tr>
                 <td class="th-2">Animal Planet</td>
@@ -42,14 +42,14 @@
                 <td class="th-3"><i class="x-style fa-solid fa-xmark"></i></td>
                 <td class="th-3"><i class="x-style fa-solid fa-xmark"></i></td>
                 <td class="th-3"><i class="x-style fa-solid fa-xmark"></i></td>
-                <td class="th-3"colspan="3"><img src="img/check31x31.jpg" alt="check"></td>
+                <td class="th-5"colspan="3"><i class="fa-solid fa-check fa-bounce"></i></td>
             </tr>
             <tr>
                 <td class="th-2">HBO Classic</td>
-                <td class="th-3"><i class="xtyle fa-solid fa-xmark"></i></td>
-                <td class="th-3"><i class="xtyle fa-solid fa-xmark"></i></td>
-                <td class="th-3"><i class="xtyle fa-solid fa-xmark"></i></td>
-                <td class="th-3"colspan="3"><img src="img/check31x31.jpg" alt="check"></td>   
+                <td class="th-3"><i class="x-style fa-solid fa-xmark"></i></td>
+                <td class="th-3"><i class="x-style fa-solid fa-xmark"></i></td>
+                <td class="th-3"><i class="x-style fa-solid fa-xmark"></i></td>
+                <td class="th-5"colspan="3"><i class="fa-solid fa-check fa-bounce"></i></td>   
             </tr>
             <tr>
                 <td class="th-2">HBO Comedy</td>
