--- a/menu-horizontal.html
+++ b/menu-horizontal.html
@@ -14,7 +14,7 @@
             <li class="style-icon"><i class="fa-solid fa-bed"></i><br>Alojamientos</li>
             <li class="style-icon"><i class="fa-solid fa-plane-departure"></i><br>Vuelos</li>
             <li class="style-icon"><i class="fa-solid fa-suitcase-rolling"></i><br>Paquetes</li>
-            <li class="style-icon"><i class="fa-solid fa-fire-flame-curved"></i><br>Ofertas</li>
+            <li class="style-icon"><i class="fa-solid fa-fire-flame-curved"></i><br>Oferta</li>
             <li class="style-icon-btn"><i class="fa-solid fa-house-flag"></i><br><span class="texto-nuevo">Nuevo</span><br>Rentas</li>
             <li class="style-icon"><i class="fa-solid fa-ticket"></i><br>Actividades</li>
             <li class="style-icon"><i class="fa-solid fa-star"></i><br>Escapadas</li>
