--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
         <li><a href ="index.html">Inicio</a></li>
         <li><a href ="listas.html">Listas</a></li>
         <li><a href ="fuentes.html">Fuentes</a>
-        <li><a href ="colores.html">colores</li>
-        <li><a href ="margenes.html">margenes</li>
-        <li><a href ="tablas.html">tabla</li>
-        <li><a href ="catalogo.html">catalogo</li>
+        <li><a href ="colores.html">Colores</li>
+        <li><a href ="margenes.html">Margenes</li>
+        <li><a href ="tablas.html">Tabla</li>
+        <li><a href ="catalogo.html">Catalogo</li>
+        <li><a href ="menu-horizontal.html">Menu-horizontal</li>
             <ul>
                 <li><a href="fuentes1.html">Fuentes1</a></li>
                 <li><a href="fuentes2.html">Fuentes2</a></li>
