--- a/media-query.html
+++ b/media-query.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="icons/all.css">
 </head>
 <body>
-    <nav class="main-nav">
+    <nav id="mainNav" class="main-nav">
     <span id="menuBar" class="menu-bar">&#9776</span>
-        <ul class="main-menu">
+        <ul id="mainMenu" class="main-menu">
             <li class="item-style"><a href="#">Menú</a></li>
             <li class="item-style"><a href="#">Contactenos</a></li>
             <li class="item-style"><a href="#">Horario de atencion</a></li>
