--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <li><a href ="tablas.html">Tabla</li>
         <li><a href ="catalogo.html">Catalogo</li>
         <li><a href ="menu-horizontal.html">Menu-horizontal</li>
+        <li><a href ="media-query.html">Media-Query</li>
             <ul>
                 <li><a href="fuentes1.html">Fuentes1</a></li>
                 <li><a href="fuentes2.html">Fuentes2</a></li>
