--- a/transitions.html
+++ b/transitions.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="icons/all.css">
 </head>
 <body>
-    <div id="container"></div>
+    <div id="transitions"></div>
 
     <script src="script.js"></script>
 </body>
