--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
         <li><a href ="catalogo.html">Catalogo</li>
         <li><a href ="menu-horizontal.html">Menu-horizontal</li>
         <li><a href ="media-query.html">Media-Query</li>
+        <li><a href ="transitions.html">Transitions</li>
+        <li><a href ="menu-subitems.html">Menu-Subitems</li>
             <ul>
                 <li><a href="fuentes1.html">Fuentes1</a></li>
                 <li><a href="fuentes2.html">Fuentes2</a></li>
