--- a/menu-subitems.html
+++ b/menu-subitems.html
@@ -17,7 +17,7 @@
                     <li><a href="#">Caqueta</a></li>
                     <li><a href="#">Cauca</a></li>
                     <li><a href="#">Huila</a>
-                        <i class="fa-solid fa-chevron-right"></i>
+                        <i i="flechita"class="fa-solid fa-chevron-right"></i>
                         <ul>
                             <li><a href="#">Neiva</a></li>
                             <li><a href="#">Pitalito</a></li>
@@ -33,5 +33,6 @@
              <li><a href="#">Galeria</a></li>
         </ul>
     </nav>
+    <script src="menu-subitems.js"></script>
 </body>
 </html>
