--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <ul>Menú
         <li><a href ="index.html">Inicio</a></li>
         <li><a href ="listas.html">Listas</a></li>
-        <li><a href ="fuentes.html">Fuentes</a>
+        <li><a href ="fuentes.html">Fuentes</a></li>
         <li><a href ="colores.html">Colores</li>
         <li><a href ="margenes.html">Margenes</li>
         <li><a href ="tablas.html">Tabla</li>
@@ -52,8 +52,7 @@
                 <li><a href="fuentes1.html">Fuentes1</a></li>
                 <li><a href="fuentes2.html">Fuentes2</a></li>
                 <li><a href="fuentes3.html">Fuentes3</a></li>
-            </ul>
-        </li>
+            </ul>  
     </ul>
 </body>
 </html>
