--- a/menu-subitems2.html
+++ b/menu-subitems2.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="fonts/style.css">
 </head>
 <body>
+    <div class="box-hamburguer">
+        <span class="hamburguer-menu icon-menu"></span>
+    </div>
     <nav>
         <ul class="main-menu">
             <li><a href="#"><span class="ico-style icon-home3"></span>inico</a></li>
