--- a/flexbox.html
+++ b/flexbox.html
@@ -80,5 +80,39 @@
         <div class="box-gen"><img src="https://picsum.photos/230/230?random=23" alt=""></div>
         <div class="box-gen"><img src="https://picsum.photos/230/230?random=24" alt=""></div>
     </div>
+    <h2>Flex-Justify: Space-Evenly</h2>
+    <div class="box-cont box-8">
+        <div class="box-gen"><img src="https://picsum.photos/230/230?random=52" alt=""></div>
+        <div class="box-gen"><img src="https://picsum.photos/230/230?random=53" alt=""></div>
+        <div class="box-gen"><img src="https://picsum.photos/230/230?random=54" alt=""></div>
+        <div class="box-gen"><img src="https://picsum.photos/230/230?random=55" alt=""></div>
+    </div>
+    <h2>Flex-Align: Align-top</h2>
+    <div class="box-height box-9">
+        <div class="box-gen"><img src="https://picsum.photos/230/230?random=56" alt=""></div>
+        <div class="box-gen"><img src="https://picsum.photos/230/230?random=57" alt=""></div>
+        <div class="box-gen"><img src="https://picsum.photos/230/230?random=58" alt=""></div>
+        <div class="box-gen"><img src="https://picsum.photos/230/230?random=59" alt=""></div>
+    </div>|
+    <h2>Flex-end: Align-top</h2>
+    <div class="box-height box-10">
+        <div class="box-gen"><img src="https://picsum.photos/230/230?random=60" alt=""></div>
+        <div class="box-gen"><img src="https://picsum.photos/230/230?random=61" alt=""></div>
+        <div class="box-gen"><img src="https://picsum.photos/230/230?random=62" alt=""></div>
+        <div class="box-gen"><img src="https://picsum.photos/230/230?random=63" alt=""></div>
+    </div>
+    <h2>Flex-end: Align-top</h2>
+    <div class="box-height box-11">
+        <div class="box-22"style="height:40%"></div>
+        <div class="box-22"style="height:80%"></div>
+        <div class="box-22"style="height:50%"></div>
+        <div class="box-22"style="height:70%"></div>
+        <div class="box-22"style="height:85%"></div>
+        <div class="box-22"style="height:90%"></div>
+        <div class="box-22"style="height:60%"></div>
+        <div class="box-22"style="height:75%"></div>
+        <div class="box-22"style="height:30%"></div>
+        <div class="box-22"style="height:55%"></div>
+    </div>
 </body>
 </html>
