--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <li><a href ="menu-subitems.html">Menu-Subitems</li>
         <li><a href ="menu-subitems2.html">Menu-Subitems2</li>
         <li><a href ="flexbox.html">flexbox</li>
-        <li><a href ="flexbox.html">calendario</li>
+        <li><a href ="calendario.html">calendario</li>
             <ul>
                 <li><a href="fuentes1.html">Fuentes1</a></li>
                 <li><a href="fuentes2.html">Fuentes2</a></li>
