--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
         <li><a href ="menu-subitems2.html">Menu-Subitems2</li>
         <li><a href ="flexbox.html">flexbox</li>
         <li><a href ="calendario.html">calendario</li>
+        <li><a href ="maquetacion.html">maquetacion</li>
+        <li><a href ="maquetacion2.html">maquetacion2</li>
             <ul>
                 <li><a href="fuentes1.html">Fuentes1</a></li>
                 <li><a href="fuentes2.html">Fuentes2</a></li>
