--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
         <li><a href ="calendario.html">calendario</li>
         <li><a href ="maquetacion.html">maquetacion</li>
         <li><a href ="maquetacion2.html">maquetacion2</li>
+        <li><a href ="mi-portafolio.html">mi-portafolio</li>
+        <li><a href ="starbucks.html">mi-portafolio</li>
             <ul>
                 <li><a href="fuentes1.html">Fuentes1</a></li>
                 <li><a href="fuentes2.html">Fuentes2</a></li>
