--- a/starbucks.html
+++ b/starbucks.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>documento</title>
     <link rel="stylesheet" href="css/starbucks.css">
+    <link rel="stylesheet" href="icons/all.css">
 </head>
 <body>
     <header>
@@ -31,5 +32,17 @@
         </div>
     </div>
     <div class="main-circle"></div>
+    <div class="social-media">
+        <i class="style-img-mini fa-brands fa-facebook-f"></i>
+        <i class="style-img-mini fa-brands fa-twitter"></i>
+        <i class="style-img-mini fa-brands fa-instagram"></i>
+    </div>
+    <div>
+        <footer>
+            <img src=" style-img-mini img/thumb1.png" alt="">
+            <img src=" style-img-mini img/thumb2.png" alt="">
+            <img src=" style-img-mini img/thumb3.png" alt="">
+        </footer>
+    </div>
 </body>
 </html>
