--- a/mi-portafolio.html
+++ b/mi-portafolio.html
@@ -24,12 +24,12 @@
                     <a href="#contacto">Contacto</a>
                 </nav>
                 <div class="logo">
-                    M<span class="color">S</span>
+                    R<span class="color">Y</span>
                 </div>
             </header>
             <div class="info">
                 <h1>RUBEN YAIR</h1>
-                <h2>CODIFICADOR, DISEÑADOR, PROFESIONAL</h2>
+                <h2>DISEÑADOR, PROGRAMADOR, PROFESIONAL</h2>
                 <div class="redes">
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="foto">
-                <img src="img/foto.png" alt="">
+<!--                 <img src="img/foto.png" alt=""> -->
             </div>
         </div>
     </section>
