--- a/mi-portafolio.html
+++ b/mi-portafolio.html
@@ -29,7 +29,7 @@
             </header>
             <div class="info">
                 <h1>RUBEN YAIR</h1>
-                <h2>DISEÑADOR, PROGRAMADOR, PROFESIONAL</h2>
+                <h2>DISEÑADOR, PROGRAMADOR,</h2>
                 <div class="redes">
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -104,7 +104,7 @@
             </div>
             <div class="fila">
                 <div class="col">
-                    <span>WORDPRESS</span>
+                    <span>premier</span>
                     <div class="cont-barra">
                         <div class="barra" id="wordpress">
                             <!-- mediante javascript luego genereremos 17 barritas con clase e -->
@@ -126,7 +126,7 @@
             </div>
             <div class="fila">
                 <div class="col">
-                    <span>PHP</span>
+                    <span>after effects</span>
                     <div class="cont-barra">
                         <div class="barra" id="php">
                             <!-- mediante javascript luego genereremos 17 barritas con clase e -->
@@ -150,7 +150,7 @@
     </section>
 
     <!-- SECCION RESUMEN -->
-    <section class="resumen" id="resumen">
+<!--     <section class="resumen" id="resumen">
         <div class="contenido-seccion">
             <h2 class="titulo-seccion">Resumen</h2>
             <h3>Mi preparación y experiencia</h3>
@@ -230,7 +230,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- SECCION CONTACTO -->
     <section class="contacto" id="contacto">
