--- a/starbucks.html
+++ b/starbucks.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>documento</title>
+    <title>Document</title>
     <link rel="stylesheet" href="css/starbucks.css">
     <link rel="stylesheet" href="icons/all.css">
 </head>
@@ -17,32 +17,31 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Menu</a></li>
                 <li><a href="#">What's New</a></li>
-                <li><a href="#">contacto</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </div>
     </header>
     <div class="main-content">
         <div class="product-text">
-            <h1>It´s not just coffee<br>It's <span class="title-color">starbucks</span></h1>
-            <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus adipisci, quasi ipsam ea, sit, natus omnis expedita ipsa quas facere ullam rerum voluptas repudiandae asperiores quam hic corrupti culpa consequatur ex? Iste odit suscipit voluptate facilis!</h3>
-            <input class="button-learn" type="button" value="LEAR MORE">
+            <h1>It´s not just Coffee<br>It's <span class="title-color">Starbucks</span></h1>
+            <h3 class="description-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae debitis molestiae quas doloribus. Facilis ratione, provident molestiae fugiat dolorem eius cumque reprehenderit, dignissimos neque quod omnis, dolores id voluptatum! Blanditiis quod adipisci nam hic fugit soluta</h3>
+            <input class="button-learn" type="button" value="LEARN MORE">
         </div>
         <div class="product-img">
-            <img src="img/img1.png" alt="">
+            <img id="iceStarbucks" src="img/img1.png" alt="">
+        </div>
+        <div class="social-media">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="style-img-mini fa-brands fa-twitter"></i>
+            <i class="style-img-mini fa-brands fa-instagram"></i>
         </div>
     </div>
-    <div class="main-circle"></div>
-    <div class="social-media">
-        <i class="style-img-mini fa-brands fa-facebook-f"></i>
-        <i class="style-img-mini fa-brands fa-twitter"></i>
-        <i class="style-img-mini fa-brands fa-instagram"></i>
-    </div>
-    <div>
-        <footer>
-            <img src=" style-img-mini img/thumb1.png" alt="">
-            <img src=" style-img-mini img/thumb2.png" alt="">
-            <img src=" style-img-mini img/thumb3.png" alt="">
-        </footer>
-    </div>
+    <footer>
+        <img id="miniGreen" class="style-img-mini mini-green" src="img/thumb1.png" alt="">
+        <img id="miniLightPink" class="style-img-mini mini-light-pink" src="img/thumb2.png" alt="">
+        <img id="miniDarkPink" class="style-img-mini mini-dark-pink" src="img/thumb3.png" alt="">
+    </footer>
+    <div id="mainCircle" class="main-circle main-circle-green"></div>
+    <script src="js/starbucks.js"></script>
 </body>
 </html>
