--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="#inicio">Inicio</a>
                     <a href="#sobremi">Sobre mí</a>
                     <a href="#habilidades">Habilidades</a>
-                    <a href="#resumen">Resumen</a>
+                    <a href="#trabajos">Trabajos</a>
                     <a href="#contacto">Contacto</a>
                     <a href="mi-portafolio.html">Portafolio</a>
                 </nav>
@@ -151,87 +151,92 @@
     </section>
 
     <!-- SECCION RESUMEN -->
-    <section class="resumen" id="resumen">
-        <div class="contenido-seccion">
-            <h2 class="titulo-seccion">Resumen</h2>
-            <h3>Mi preparación y experiencia</h3>
+<!-- sección trabajos -->
+<section class="trabajos" id="trabajos">
+    <h2>Mis Trabajos</h2>
+
+    <nav>
+        <a href="javascript:void(0)" class="borde" id="item" onclick="verCategoria('item')">Todos</a>
+        <a href="javascript:void(0)" class="" id="disenio" onclick="verCategoria('disenio')">Diseño</a>
+        <a href="javascript:void(0)" class="" id="programacion" onclick="verCategoria('programacion')">Programación</a>
+        <a href="javascript:void(0)" class="" id="animaciones" onclick="verCategoria('animaciones')">Fotografía</a>
+    </nav>
+
+    <div class="galeria">
+        <div class="item disenio">
+            <img src="img/trabajo1.png" alt="">
             <div class="info">
-                <div class="col">
-                    <span class="titulo">Educación</span>
-                    <table>
-                        <tr>
-                            <td class="datos">
-                                <h3>2006 - 2010</h3>
-                            </td>
-                            <td rowspan="2" class="descripcion">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero at soluta quos explicabo dolor recusandae, dolorum.
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <h4>Lic. en computación</h4>
-                                <p>Universidad de San Juan</p>
-                                <span class="promedio">8.9 PG</span>
-                            </td>
-                        </tr>
-                    </table>
-                    <table>
-                        <tr>
-                            <td class="datos">
-                                <h3>2010 - 2015</h3>
-                            </td>
-                            <td rowspan="2" class="descripcion">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero at soluta quos explicabo dolor recusandae, dolorum.
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <h4>Programador FS</h4>
-                                <p>Udemy Cursos</p>
-                                <span class="promedio">8.9 PG</span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="col">
-                    <span class="titulo">Experiencia Laboral</span>
-                    <table>
-                        <tr>
-                            <td class="datos">
-                                <h3>3 Años</h3>
-                            </td>
-                            <td rowspan="2" class="descripcion">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero at soluta quos explicabo dolor recusandae, dolorum.
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <h4>Mercado Libre</h4>
-                                <p>Programador Junior</p>
-                               
-                            </td>
-                        </tr>
-                    </table>
-                    <table>
-                        <tr>
-                            <td class="datos">
-                                <h3>2 Años</h3>
-                            </td>
-                            <td rowspan="2" class="descripcion">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero at soluta quos explicabo dolor recusandae, dolorum.
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <h4>Software Inc.</h4>
-                                <p>Diseñadr Principal</p>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
+                <h3>Titulo del Trabajo</h3>
+                <span>html</span><span>css</span><span>javascript</span>
+                <a href="#">Ver Trabajo</a>
             </div>
         </div>
-    </section>
+        <div class="item programacion">
+            <img src="img/trabajo2.png" alt="">
+            <div class="info">
+                <h3>Titulo del Trabajo</h3>
+                <span>html</span><span>css</span><span>javascript</span>
+                <a href="#">Ver Trabajo</a>
+            </div>
+        </div>
+        <div class="item animaciones">
+            <img src="img/trabajo3.png" alt="">
+            <div class="info">
+                <h3>Titulo del Trabajo</h3>
+                <span>html</span><span>css</span><span>javascript</span>
+                <a href="#">Ver Trabajo</a>
+            </div>
+        </div>
+        <div class="item disenio">
+            <img src="img/trabajo4.png" alt="">
+            <div class="info">
+                <h3>Titulo del Trabajo</h3>
+                <span>html</span><span>css</span><span>javascript</span>
+                <a href="#">Ver Trabajo</a>
+            </div>
+        </div>
+        <div class="item animaciones">
+            <img src="img/trabajo5.png" alt="">
+            <div class="info">
+                <h3>Titulo del Trabajo</h3>
+                <span>html</span><span>css</span><span>javascript</span>
+                <a href="#">Ver Trabajo</a>
+            </div>
+        </div>
+        <div class="item programacion">
+            <img src="img/trabajo6.png" alt="">
+            <div class="info">
+                <h3>Titulo del Trabajo</h3>
+                <span>html</span><span>css</span><span>javascript</span>
+                <a href="#">Ver Trabajo</a>
+            </div>
+        </div>
+        <div class="item disenio">
+            <img src="img/trabajo7.png" alt="">
+            <div class="info">
+                <h3>Titulo del Trabajo</h3>
+                <span>html</span><span>css</span><span>javascript</span>
+                <a href="#">Ver Trabajo</a>
+            </div>
+        </div>
+        <div class="item programacion">
+            <img src="img/trabajo8.png" alt="">
+            <div class="info">
+                <h3>Titulo del Trabajo</h3>
+                <span>html</span><span>css</span><span>javascript</span>
+                <a href="#">Ver Trabajo</a>
+            </div>
+        </div>
+        <div class="item programacion">
+            <img src="img/trabajo9.png" alt="">
+            <div class="info">
+                <h3>Titulo del Trabajo</h3>
+                <span>html</span><span>css</span><span>javascript</span>
+                <a href="#">Ver Trabajo</a>
+            </div>
+        </div>
+    </div>
+</section>
 
     <!-- SECCION CONTACTO -->
     <section class="contacto" id="contacto">
