--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="foto">
-<!--                 <img src="img/foto.png" alt=""> -->
+                <img class="yair" src="img/yair.JPG" alt="">
             </div>
         </div>
     </section>
