--- a/mi-portafolio.html
+++ b/mi-portafolio.html
@@ -56,6 +56,7 @@
         <li><a href ="mi-portafolio.html">mi-portafolio</li>
         <li><a href ="starbucks.html">starbucks</li>
         <li><a href ="nero.html">Nero</li>
+        <li><a href ="sneakers.html">sneakers</li>
             <ul>
                 <li><a href="fuentes1.html">Fuentes1</a></li>
                 <li><a href="fuentes2.html">Fuentes2</a></li>
