--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
     <div class="galeria">
         <div class="item disenio">
-            <img src="img/trabajo1.png" alt="">
+            <img src="img/Captura de pantalla 2023-10-20 111115.png" alt="">
             <div class="info">
                 <h3>Titulo del Trabajo</h3>
                 <span>html</span><span>css</span><span>javascript</span>
@@ -249,19 +249,19 @@
                     <h2>
                         <i class="fa-solid fa-phone"></i> Teléfono
                     </h2>
-                    <span class="info-contacto">11 - 11223344</span>
+                    <span class="info-contacto">57+ - 3167058136</span>
                 </div>
                 <div class="col">
                     <h2>
                         <i class="fa-solid fa-envelope"></i> Correo
                     </h2>
-                    <span class="info-contacto">martinshepard@gmail.com</span>
+                    <span class="info-contacto">murciapradillarubenyair@gmail.com</span>
                 </div>
                 <div class="col">
                     <h2>
                         <i class="fa-solid fa-globe"></i> Página Web
                     </h2>
-                    <span class="info-contacto">martinshepard.com</span>
+                    <span class="info-contacto">https://yairmurcia.github.io/rubenyairmurciapradilla2/</span>
                 </div>
             </div>
         </div>
