--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@
             </div>
         </div>
         <div class="item animaciones">
-            <img src="img/animacion.png" alt="">
+            <!-- <img src="img/animacion.png" alt=""> -->
             <div class="info">
                 <h3>animacion</h3>
                 <span>html</span><span>css</span><span>javascript</span>
-                <a href="img/animacion.png">Ver Trabajo</a>
+                <!-- <a href="img/animacion.png">Ver Trabajo</a> -->
             </div>
         </div>
         <div class="item disenio">
