--- a/sneakers.html
+++ b/sneakers.html
@@ -4,39 +4,106 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sneakers</title>
-    <link rel="stylesheet" href="css/">
+    <link rel="stylesheet" href="css/sneakers.css">
     <link rel="stylesheet" href="icons/all.css">
 </head>
 <body>
-    <header></header>
-    <div class="box-img-fixed">
-        <div class="box-img-selected">
-            <img id="mainImgFixed1" class="main-img-fixed" src="img/Sneakers/image-product-1.jpeg" alt="">
-            <img id="mainImgFixed2" class="main-img-fixed img-hidden" src="img/Sneakers/image-product-2.jpeg" alt="">
-            <img id="mainImgFixed3" class="main-img-fixed img-hidden" src="img/Sneakers/image-product-3.jpeg" alt="">
-            <img id="mainImgFixed4" class="main-img-fixed img-hidden" src="img/Sneakers/image-product-4.jpeg" alt="">
-            <div id="iconLeft" class="box-icons box-icons-left">
-                <i class="icon-style fa-solid fa-chevron-left"></i>
+    <div class="content">
+        <header>
+            <div class="main-title">
+                <h1>Sneakers</h1>
             </div>
-            <div id="iconRight" class="box-icons box-icons-right">
-                <i class="icon-style fa-solid fa-chevron-right"></i>
+            <nav>
+                <ul class="main-menu">
+                    <li>Collections</li>
+                    <li>Men</li>
+                    <li>Women</li>
+                    <li>About</li>
+                    <li>Contact</li>
+                </ul>
+            </nav>
+            <div class="carrito-foto">
+                <i class="icon-carrito fa-solid fa-cart-shopping"></i>
+                <div class="box-foto">
+                    <img class="foto" src="img/93_d_fis [Convertido].jpg" alt="">
+                </div>
+            </div>
+        </header>
+        <hr>
+        <div id="boxImgFixed" class="box-img-fixed-hidden">
+            <div class="box-img-selected">
+                <img id="mainImgFixed1" class="main-img-fixed" src="img/Sneakers/image-product-1.jpeg" alt="">
+                <img id="mainImgFixed2" class="main-img-fixed img-hidden" src="img/Sneakers/image-product-2.jpeg" alt="">
+                <img id="mainImgFixed3" class="main-img-fixed img-hidden" src="img/Sneakers/image-product-3.jpeg" alt="">
+                <img id="mainImgFixed4" class="main-img-fixed img-hidden" src="img/Sneakers/image-product-4.jpeg" alt="">
+                <div id="iconLeft" class="box-icons box-icons-left">
+                    <i class="icon-style fa-solid fa-chevron-left"></i>
+                </div>
+                <div id="iconRight" class="box-icons box-icons-right">
+                    <i class="icon-style fa-solid fa-chevron-right"></i>
+                </div>
+                <div id="botonCerrar" class="box-boton-cerrar">
+                    <span class="boton-cerrar">X</span>
+                </div>
+            </div>  
+        </div>
+        <div class="box-main-content">
+            <div class="main-content">
+                <div class="box-left">
+                    <div class="box-img">
+                        <img id="mainImg" class="main-img" src="img/Sneakers/image-product-1.jpeg" alt="">
+                    </div>
+                    <div class="box-thumbnail">
+                        <div class="box-thumb">
+                            <img id="thumb1" class="thumb thumb-1" src="img/Sneakers/image-product-1.jpeg" alt="">
+                        </div>
+                        <div class="box-thumb">
+                            <img id="thumb2" class="thumb thumb-2" src="img/Sneakers/image-product-2.jpeg" alt="">
+                        </div>
+                        <div class="box-thumb">
+                            <img id="thumb3" class="thumb thumb-3" src="img/Sneakers/image-product-3.jpeg" alt="">
+                        </div>
+                        <div class="box-thumb">
+                            <img id="thumb4" class="thumb thumb-4" src="img/Sneakers/image-product-4.jpeg" alt=""> 
+                        </div>
+                    </div>
+                </div>
+                <div class="box-info">
+                    <div class="info-producto">
+                        <h3 class="title-info-1">Sneakers Company</h3>
+                        <h2 class="title-info-2">Fall Limited<br>Edition Sneakers</h2>
+                        <p class="texto-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga nobis optio veniam animi eos molestias alias provident quis et beatae architecto numquam inventore iusto ipsam, ex iste aliquam exercitationem odit?</p>
+                        <div class="box-precio">
+                            <div id="precioUnitario" class="precio">
+                                $0
+                            </div>
+                            <div class="descuento">
+                                <label class="lbl-descuento">50%</label>
+                            </div>
+                        </div>
+                        <div class="box-precio-sin-dec">
+                            $360.000
+                        </div>
+                        <div class="box-minus-plus">
+                            <div id="boxMinus" class="box-minus">
+                                <i class="fa-solid fa-minus"></i>
+                            </div>
+                            <div id="boxCantidad" class="box-cantidad">
+                                0
+                            </div>
+                            <div id="boxPlus" class="box-plus">
+                                <i class="fa-solid fa-plus"></i>
+                            </div>
+                        </div>
+                        <div id="valorTotal" class="valor-total">
+                            $ 0
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>  
     </div>
-    <div class="main-content">
-        <div class="box-left">
-            <div class="box-img">
-                <img id="mainImg" class="main-img" src="img/Sneakers/image-product-1.jpeg" alt="">
-            </div>
-            <div class="box-thumbnail">
-                <img class="thumb thumb-1" src="img/Sneakers/image-product-1.jpeg" alt="">
-                <img class="thumb thumb-2" src="img/Sneakers/image-product-2.jpeg" alt="">
-                <img class="thumb thumb-3" src="img/Sneakers/image-product-3.jpeg" alt="">
-                <img class="thumb thumb-4" src="img/Sneakers/image-product-4.jpeg" alt="">
-            </div>
-        </div>
-        <div class="box-info"></div>
-    </div>
+    
     <script src="js/sneakers.js"></script>
 </body>
 </html>
