cambios subidos porfin

--- a/index.html
+++ b/index.html
@@ -164,39 +164,41 @@
 
     <div class="galeria">
         <div class="item disenio">
-            <img src="img/Captura de pantalla 2023-10-20 111115.png" alt="">
+            <a href="sneakers.html">
+            <img src="img/image-product-1.jpeg" alt="">
             <div class="info">
-                <h3>Titulo del Trabajo</h3>
+                <h3>Sneakers</h3>
                 <span>html</span><span>css</span><span>javascript</span>
-                <a href="#">Ver Trabajo</a>
+                <a href="sneakers.html">Ver Trabajo</a>
             </div>
+            </a>
         </div>
         <div class="item programacion">
-            <img src="img/trabajo2.png" alt="">
+            <img src="img/flexbox.jpeg" alt="">
             <div class="info">
-                <h3>Titulo del Trabajo</h3>
+                <h3>flexbox</h3>
                 <span>html</span><span>css</span><span>javascript</span>
-                <a href="#">Ver Trabajo</a>
+                <a href="flexbox.html">Ver Trabajo</a>
             </div>
         </div>
         <div class="item animaciones">
-            <img src="img/trabajo3.png" alt="">
+            <img src="img/animacion.png" alt="">
             <div class="info">
-                <h3>Titulo del Trabajo</h3>
+                <h3>animacion</h3>
                 <span>html</span><span>css</span><span>javascript</span>
-                <a href="#">Ver Trabajo</a>
+                <a href="img/animacion.png">Ver Trabajo</a>
             </div>
         </div>
         <div class="item disenio">
-            <img src="img/trabajo4.png" alt="">
+            <img src="img/calendario.jpeg" alt="">
             <div class="info">
-                <h3>Titulo del Trabajo</h3>
+                <h3>calendario</h3>
                 <span>html</span><span>css</span><span>javascript</span>
-                <a href="#">Ver Trabajo</a>
+                <a href="calendario.html">Ver Trabajo</a>
             </div>
         </div>
         <div class="item animaciones">
-            <img src="img/trabajo5.png" alt="">
+            <img src="img/colores.jpeg" alt="">
             <div class="info">
                 <h3>Titulo del Trabajo</h3>
                 <span>html</span><span>css</span><span>javascript</span>
@@ -267,6 +269,7 @@
         </div>
     </section>
 
+    
     <script src="js/index.js"></script>
 </body>
 </html>
